--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 class="astro-title"> Welcome to Astroworld! </h1>
     
     <div class="astroworld-container">
-        <img id="astroworld-logo" src="/uselesswebsite/images/45178698e885b77f1000a5edbf8d7ed2.jpg" alt="Astroworld Logo">
+        <img id="astroworld-logo" src="https://a.allegroimg.com/original/11a023/d2976ccc43409e9126bb2f3fd398/TRAVIS-SCOTT-ASTROWORLD-2XWINYL" alt="Astroworld Logo">
         <button class="astro-button"> Join the ride!</button>
         <audio id="audio" hidden>
             <source src="/uselesswebsite/AstroworldAlbum/01. STARGAZING.mp3" type="audio/mp3">
