--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 class="astro-title"> Welcome to Astroworld! </h1>
     
     <div class="astroworld-container">
-        <img id="astroworld-logo" src="https://a.allegroimg.com/original/11a023/d2976ccc43409e9126bb2f3fd398/TRAVIS-SCOTT-ASTROWORLD-2XWINYL" alt="Astroworld Logo">
+        <img id="astroworld-logo" src="https://i.pinimg.com/564x/36/c0/4b/36c04b36ce11db969bdfeb209c7ef2c7.jpg" alt="Astroworld Logo">
         <button class="astro-button"> Join the ride!</button>
         <audio id="audio" hidden>
             <source src="/uselesswebsite/AstroworldAlbum/01. STARGAZING.mp3" type="audio/mp3">
