--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leave, while you still can!</title>
+    <title>Did you do a big mistake?</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <button class="button">Click me, please!</button>
+    <button class="button"> Click for HYPE! </button>
   </body>
   <script src="button.js"></script>
 </html>
