--- a/nonono.html
+++ b/nonono.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/31g0YE61PLQ?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+    <!-- <iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/31g0YE61PLQ?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   -->
+    <img src="https://media.giphy.com/media/JYZ397GsFrFtu/source.gif">
+    <img src="https://media.giphy.com/media/d10dMmzqCYqQ0/source.gif">
+    <audio autoplay="true">
+        <source src="the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+    </audio>
 </body>
 </html>
