--- a/nonono.html
+++ b/nonono.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="nonono.css" />
 </head>
 <body>
-    <!-- <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/31g0YE61PLQ?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   -->
-    <img src="https://media.giphy.com/media/JYZ397GsFrFtu/source.gif">
-    <img src="https://media.giphy.com/media/d10dMmzqCYqQ0/source.gif">
-    <audio autoplay="true">
-        <source src="the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
-    </audio>
+    <div class="videoContainer">
+      <video class="video first" autoplay loop width="50" height="50">
+        <source src="/assets/michaelscott_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/michaelscott_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/michaelscott_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/getout_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/getout_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/getout_no.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay loop width="50" height="50">
+        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
+      </video>
+    </div>
 </body>
+    <script src="index.js"></script>
 </html>
