--- a/nonono.html
+++ b/nonono.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <div class="videoContainer">
-      <video class="video  playsinlinefirst" autoplay loop width="50" height="50">
+      <video class="video first" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video class="video" playsinline autoplay loop width="50" height="50">
+      <video class="video" autoplay loop width="50" height="50" playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
     </div>
