--- a/nonono.html
+++ b/nonono.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <div class="videoContainer">
-      <video autoplay loop   playsinline muted>
+      <video autoplay loop   playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline muted>
+      <video  autoplay loop  playsinline>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
     </div>
