--- a/nonono.html
+++ b/nonono.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <div class="videoContainer">
-      <video autoplay loop   playsinline>
+      <video class="video first" autoplay loop width="50" height="50" controls>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/michaelscott_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/getout_no.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
-      <video  autoplay loop  playsinline>
+      <video class="video" autoplay loop width="50" height="50" controls>
         <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
       </video>
     </div>
