--- a/nonono.html
+++ b/nonono.html
@@ -7,29 +7,12 @@
     <link rel="stylesheet" href="nonono.css" />
 </head>
 <body>
-    <div class="videoContainer">
-        <iframe class="video first" width="560" height="315" src="https://www.youtube.com/embed/31g0YE61PLQ?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/31g0YE61PLQ?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/31g0YE61PLQ?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/getout_no.mp4" type="video/mp4">
-      </video>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/getout_no.mp4" type="video/mp4">
-      </video>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/getout_no.mp4" type="video/mp4">
-      </video>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
-      </video>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
-      </video>
-      <video class="video" autoplay loop width="50" height="50" controls>
-        <source src="/assets/No, no, I refuse - Cop Out.mp4" type="video/mp4">
-      </video>
+    <audio autoplay loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>  
+    <div id="gifId" class="gifContainer">
+        
     </div>
 </body>
     <script src="index.js"></script>
-</html>v
+</html>
