--- a/nonono.html
+++ b/nonono.html
@@ -9,10 +9,25 @@
 <body>
     <audio autoplay loop>
         <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
-      </audio>  
+      </audio>
+    <audio id="audio1" loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>   
+      <audio id="audio2" loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>   
+      <audio id="audio3" loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="audio4" loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="audio5" loop>
+        <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
+      </audio>       
     <div id="gifId" class="gifContainer">
-        
     </div>
 </body>
-    <script src="index.js"></script>
+    <script src="/js/renderGifs.js"></script>
+    <script src="/js/playAudio.js"></script>
 </html>
