--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   <body>
     <button class="button"> Click for HYPE! </button>
   </body>
-  <script src="button.js"></script>
+  <script src="/js/button.js"></script>
 </html>
