--- a/homePage.html
+++ b/homePage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Did you do a big mistake?</title>
-    <link rel="stylesheet" href="index.css" />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <link rel="stylesheet" href="homePage.css" />
+    <link rel="shortcut icon" href="http://example.com/favicon.ico">
     
 
     
