--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Did you do a big mistake?</title>
-    <link rel="stylesheet" href="homePage.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="http://example.com/favicon.ico">
     
 
