--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="title">
     <h1> Did you do a big mistake? </h1>
     </div>
-    <button class="button"> Click for HYPE! </button>
+    <button id="buttonId" class="button"> Click for HYPE! </button>
     <div class="titleTwo">
       <p> Sitting in the office so you have to be quiet?</p>
     </div>
