--- a/secondPage.html
+++ b/secondPage.html
@@ -29,7 +29,7 @@
         <source src="/assets/the-office-michael-scottno-god-no.mp3" type="audio/mpeg">
       </audio>
   <div class="gifBigContainer">       
-    <div id="gifId" class="gifContainer">
+    <div class="gifContainer">
     </div>
   </div>
     
