--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <button class="button"> Click for HYPE! </button>
     <div class="titleTwo">
-      <p> Sitting in the office so you have to be quiet? </p>
+      <h2> Sitting in the office so you have to be quiet? </h2>
     </div>
   </body>
   <script src="/js/button.js"></script>
